# 4ex.ninja

./: .gitignore  AUDIT_SUMMARY_CRITICAL_FINDINGS.md  BACKEND_CLEANUP_SUMMARY.md  BACKEND_CONNECTION_GUIDE.md  BACKTESTING_METHODOLOGY_AUDIT.md  BACKTESTING_RESULTS_REVIEW.md  BATCH_2_RESULTS_ANALYSIS.md  CODEBASE_ORGANIZATION_README.md  COMPREHENSIVE_BACKTESTING_COMPLETION_REPORT.md  COMPREHENSIVE_BACKTESTING_PLAN.md  DEPLOYMENT_GUIDE.md  EMERGENCY_RISK_MANAGEMENT_FRAMEWORK.md  EXECUTION_STATUS_REPORT.md  FRONTEND_OPTIMIZATION_DATA_SOURCE.md  MULTI_TIMEFRAME_CONFLUENCE_STRATEGY.md  PERFORMANCE-MONITORING-IMPLEMENTATION.md  PHASE6_LIVE_TRADING_IMPLEMENTATION_STRATEGY.md  PHASE_ALIGNMENT_CLARIFICATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  PRODUCTION_STRATEGY_SUMMARY.md  PyTorch-Implementation.md  STEP_1_1_SYSTEM_VALIDATION_REPORT.md  STEP_6_1_REALTIME_RISK_MANAGEMENT_DESIGN.md  STRIPE-WEBHOOK-SETUP.md  SYSTEM_VALIDATION_REPORT.md  check_deployment_readiness.sh  check_monitoring_service.sh  check_monitoring_status.sh  check_ports.sh  consolidate_services.sh  copilot-implementation-ideas.js  csp-style-errors-fix.md  data_acquisition_step_1_2.py  deploy-backend.sh  deploy-emergency-risk.sh  deploy-var-history.sh  deploy_correlation_backend.sh  deploy_discord_config.sh  deploy_phase2_monitoring.sh  (+17 more)
4ex.ninja-backend/: .env.complete  API_OPTIMIZATION_SUMMARY.md  API_RESPONSE_TIME_ANALYSIS.md  API_RESPONSE_TIME_FINAL_REPORT.md  ASYNC-NOTIFICATION-SERVICE-COMPLETE.md  DAY3-4_IMPLEMENTATION_SUMMARY.md  FASTAPI-IMPLEMENTATION-COMPLETE.md  README.md  (+104 more)
(+1339 files in other folders)
