[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fourex-ninja-backend"
version = "0.1.0"
description = "4ex.ninja Trading Platform Backend"
authors = [
    {name = "4ex.ninja", email = "info@4ex.ninja"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "discord-webhook>=1.3.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/tests"]
python_paths = ["src"]
asyncio_mode = "auto"

[tool.pylsp-mypy]
enabled = true
live_mode = true
